WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36878
REGRESSION: Trailing colon on hostnames (with no port specified) causes "Not allowed to use restricted network port"
https://bugs.webkit.org/show_bug.cgi?id=36878
Summary
REGRESSION: Trailing colon on hostnames (with no port specified) causes "Not ...
Rowan Beentje
Reported
2010-03-31 03:12:27 PDT
Hostnames with colons appended, with no ports specified, have started to cause a "Not allowed to use restricted network port" error. Compare:
http://webkit.org
and
http://webkit.org
: This is a regression in the nightlies - works in Safari 4.0.5, doesn't work in
r56669
. I'd expect the URL port syntax without a specified port to use the default port.
Attachments
Patch
(8.90 KB, patch)
2010-03-31 16:53 PDT
,
Mark Rowe (bdash)
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Rowan Beentje
Comment 1
2010-03-31 03:35:07 PDT
I would suspect
http://trac.webkit.org/changeset/56489
:)
Mark Rowe (bdash)
Comment 2
2010-03-31 16:53:38 PDT
Created
attachment 52225
[details]
Patch
Mark Rowe (bdash)
Comment 3
2010-03-31 17:13:44 PDT
Landed in
r56879
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug